--- a/pages/style.css
+++ b/pages/style.css
@@ -15,4 +15,5 @@
 @import url(../blocks/music/music.css);
 @import url(../blocks/rewiews/rewiews.css);
 @import url(../blocks/questions/questions.css);
+@import url(../blocks/tickets/tickets.css);
 @import url(../blocks/footer/footer.css);
