--- a/blocks/calendar/calendar.css
+++ b/blocks/calendar/calendar.css
@@ -1,111 +1,250 @@
 .calendar {
-    padding: 100px 0 40px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: rgba(28,71,168, 1);
+  padding: 100px 0 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(28, 71, 168, 1);
+  position: relative;
+  z-index: 0;
 }
 
-#t {
-    padding-left: 20px;
-  min-width: 300px;
-  font-size: 50px; 
-  color: white;
-  text-align: left;
+.calendar__content {
+  max-width: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
+.countdown h2 {
+  font-family: Arial;
+  font-size: 75px;
+  font-weight: 300;
+  line-height: 80px;
+  letter-spacing: 0em;
+  text-align: justify;
 }
 
 .show-time {
-    display: flex;
-    flex-direction: row;
-    text-align: center;
+  width: 100%;
+  display: flex;
+  /* grid-template-columns: 1fr 1fr; */
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+  box-sizing: border-box;
 }
 
 .date {
-    padding: 0 30px;
-    display: flex;
-    flex-direction: column;
-    border-right: 2px solid white;
-    text-transform: uppercase;
+  padding: 0;
+  padding: 0 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-right: 4px solid white;
+}
+
+.flex-time {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.count {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.date h3 {
+  font-family: Arial;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  font-size: 25px;
+  font-weight: 400;
+  line-height: 25px;
+  letter-spacing: 0.02em;
+  color: white;
+}
+
+.date h2 {
+  font-family: Arial;
+  margin: 0;
+  padding: 0;
+  font-size: 75px;
+  font-weight: 400;
+  line-height: 75px;
+  letter-spacing: 0.02em;
 }
 
 .time {
-    text-align: left;
-    padding: 0 30px;
-    display: flex;
-    flex-direction: column;
-    border-left: 2px solid white;
-    
+  text-align: left;
+  padding: 0 0 0 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-family: 'Bebas Neue';
   font-size: 20px;
   font-weight: 400;
   line-height: 20px;
-  letter-spacing: 0em;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+}
+
+.time p {
+  font-size: 25px;
+  font-weight: 400;
+  line-height: 25px;
+  letter-spacing: 0.02em;
+}
+
+.time-left {
+  font-size: 25px;
+  font-weight: 400;
+  line-height: 25px;
+  letter-spacing: 0.02em;
+  text-transform: uppercase;
 }
 
 .countdown {
-    padding: 30px 0;
-    text-align: center;
+  margin-top: 30px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 30px 0;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 18px;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
 }
 
 .days {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .buy-tickets__info {
-    background-color: rgb(78, 18, 134);
-    border-radius: 20px;
-    width: 80%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding: 15px;
+  background-color: rgb(78, 18, 134);
+  border-radius: 20px;
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px;
 }
 
 .palas {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .adress {
-    padding-left: 15px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    border-left: 4px solid white;
-    text-transform: uppercase;
+  padding-left: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  border-left: 3px solid white;
+  text-transform: uppercase;
+  gap: 5px;
+}
+
+.adress h2 {
+  font-family: Arial;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 18px;
+  letter-spacing: 0.05em;
+}
+.adress p {
+  font-family: Arial;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 15px;
+  letter-spacing: 0.05em;
+}
+
+.day-show {
+  font-family: Arial;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 18px;
+  letter-spacing: 0em;
 }
 
 .calendar__logo {
-    padding-right: 10px;
-    max-width: 200px;
+  padding-right: 10px;
+  max-width: 200px;
 }
 
 .date-show {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
 }
 
 .buy-ticket {
-    padding: 7px 15px;
-    border-radius: 25px;
-    color: white;
-    background-color: rgb(255, 187, 0);
-    border: none;
-    text-transform: uppercase;
+  padding: 7px 15px;
+  border-radius: 25px;
+  color: white;
+  background-color: rgb(255, 187, 0);
+  border: none;
+  text-transform: uppercase;
+  font-family: 'Bebas Neue';
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 20px;
+  letter-spacing: 0.1em;
 }
 
 .buy-ticket:hover {
-    cursor: pointer;
-    box-shadow: 0 2px 10px black;
-    transform: scale(1.1);
+  cursor: pointer;
+  box-shadow: 0 2px 10px black;
+  transform: scale(1.1);
+}
+
+.date__next, 
+.date__prev {
+  width: max-content;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  position: absolute;
+  transition: 0.6s ease;
+}
+
+.date__next img, 
+.date__prev img {
+  height: 90px;
+}
+
+.date__next:hover, 
+.date__prev:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+.date__next {
+  right: 20px;
+}
+
+.date__prev {
+  left: 20px;
+}
+
+.date__text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
