--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -11,4 +11,15 @@
   align-items: center;
   justify-content: center;
   text-transform: uppercase;
+  text-align: center;
+  gap: 20px;
+}
+
+/* .contacts a {
+  transition: 0.6s ease;
+} */
+
+.contacts a:hover {
+  opacity: .7;
+  border-bottom: 2px solid rgba(255, 255, 255, .7);
 }
