--- a/blocks/gallery/gallery.css
+++ b/blocks/gallery/gallery.css
@@ -4,11 +4,11 @@
 }
 
 .slideshow-container {
-  position: static;
+  position: relative;
   margin: 0 auto;
   padding: 0;
-  width: 60%;
-  position: relative;
+  max-width: 60%;
+  /* max-height: 510px; */
 }
 
 * {
@@ -21,12 +21,12 @@
 
 .prev,
 .next {
+  padding: 0;
   cursor: pointer;
   position: absolute;
   top: 35%;
   width: auto;
   margin-top: -22px;
-  padding: 10px;
   color: white;
   font-weight: bold;
   font-size: 18px;
@@ -36,13 +36,23 @@
 }
 
 .next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
+  right: -50px;
+  /* border-radius: 3px 0 0 3px; */
+}
+
+.prev {
+  left: -50px;
+}
+
+.next img,
+.prev img {
+  height: 90px;
 }
 
 .prev:hover,
 .next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
+  transform: scale(1.1);
+  cursor: pointer;
 }
 
 .text {
@@ -62,7 +72,7 @@
   position: absolute;
   top: 0;
 }
-
+/* 
 .dot {
   cursor: pointer;
   height: 10px;
@@ -73,7 +83,7 @@
   display: inline-block;
   align-self: baseline;
   transition: background-color 0.6s ease;
-}
+} */
 
 .fade {
   animation-name: fade;
