--- a/blocks/main-page/main-page.css
+++ b/blocks/main-page/main-page.css
@@ -8,7 +8,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     position: relative;
-    
+    z-index: 1;
 }
 
 .title {
@@ -17,6 +17,7 @@
     align-items: center;
     justify-content: center;
     gap: 40px;
+    z-index: 2;
 }
 
 .main-image {
@@ -26,4 +27,16 @@
     position: absolute;
     top: 0;
     left: 0;
+}
+
+.main-text {
+    max-width: min-content;
+    font-family: 'Bebas Neue';
+    font-size: 35px;
+  font-weight: 700;
+  line-height: 40px;
+  letter-spacing: 0.2em;
+}
+.logo {
+  max-width: 600px;
 }
