--- a/blocks/questions/questions.css
+++ b/blocks/questions/questions.css
@@ -4,7 +4,14 @@
   background-color: rgba(28, 71, 168, 0.75);
   display: flex;
   flex-direction: column;
-  gap: 40px;
+  align-items: center;
+}
+.questions__box {
+  width: 80%;
+  margin-top: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .accordion {
@@ -18,6 +25,13 @@
   outline: none;
   transition: 0.4s;
   border-radius: 10px;
+  font-family: 'Arial';
+}
+
+.accordion__block {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 
 .active,
