--- a/blocks/videos/videos.css
+++ b/blocks/videos/videos.css
@@ -1,7 +1,10 @@
 .videos {
     margin: 0;
-    padding: 60px;
+    padding: 30px 60px;
     background-color: rgba(28,71,168, 0.75);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .video__content {
@@ -9,21 +12,29 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    width: 80%;
 }
 
 .video__description {
-    width: 50%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 15px;
 }
 
 .video {
-    width: 50%;
+    margin-left: 20px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     gap: 20px;
 }
 
 .video__text {
+    margin-top: 30px;
     text-align: center;
 }
