--- a/blocks/artists/artists.css
+++ b/blocks/artists/artists.css
@@ -1,47 +1,71 @@
 .artists {
-    margin: 0;
-    padding: 0 60px 60px;
-    background-color: rgba(28,71,168, 0.75);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 40px;
+  margin: 0;
+  padding: 0 60px 60px;
+  background-color: rgba(28, 71, 168, 0.75);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
 }
 
 .artists__description {
-    width: 80%;
-    text-align: center;
+  width: 80%;
+  text-align: center;
 }
 
 .artists__carousel {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    gap: 50px;
-    
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  gap: 50px;
 }
 .artist {
-    max-width: 20%;
-    text-align: center;
-    transition: transform 1s ease-out;
+  max-width: 30%;
+  text-align: center;
+  transition: transform 1s ease-out;
 }
 
+.artist img {
+    margin-bottom: -40px;
+    z-index: -2;
+    width: 80%;
+  }
+
 .artist:hover {
-    text-align: center;
-    transform: scale(1.2);
-    
+  text-align: center;
+  transform: scale(1.2);
+}
+
+.artist__description {
+  padding: 15px;
+  border-radius: 20px;
+  background: rgba(51, 46, 56, 0.75);
+  z-index: 3;
 }
 
 .artist__name {
-    margin-top: -40px;
-    text-align: center;
-    border-top-right-radius: 20px;
-    border-top-left-radius: 20px;
+    margin-bottom: 10px;
+  text-align: center;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 18px;
+  letter-spacing: 0em;
+
 }
 
 .artist__text {
-    text-align: center;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
+  text-align: center;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 12px;
+  letter-spacing: 0em;
+}
+
+@media screen and (max-width: 900px) {
+  .artists {
+    padding: 0 30px 30px;
+    background-color: rgba(28, 71, 168, 1);
+    gap: 20px;
+  }
 }
