--- a/blocks/calendar/calendar.css
+++ b/blocks/calendar/calendar.css
@@ -11,6 +11,7 @@
 
 .calendar__content {
   max-width: 500px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -85,7 +86,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  font-family: 'Bebas Neue';
+  font-family: "Bebas Neue";
   font-size: 20px;
   font-weight: 400;
   line-height: 20px;
@@ -127,7 +128,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .buy-tickets__info {
@@ -201,7 +202,7 @@
   background-color: rgb(255, 187, 0);
   border: none;
   text-transform: uppercase;
-  font-family: 'Bebas Neue';
+  font-family: "Bebas Neue";
   font-weight: bold;
   font-size: 20px;
   line-height: 20px;
@@ -214,7 +215,7 @@
   transform: scale(1.1);
 }
 
-.date__next, 
+.date__next,
 .date__prev {
   width: max-content;
   display: flex;
@@ -224,12 +225,12 @@
   transition: 0.6s ease;
 }
 
-.date__next img, 
+.date__next img,
 .date__prev img {
   height: 90px;
 }
 
-.date__next:hover, 
+.date__next:hover,
 .date__prev:hover {
   transform: scale(1.1);
   cursor: pointer;
@@ -247,4 +248,44 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@media screen and (max-width: 800px) {
+  .calendar {
+    padding: 60px 30px 20px;
+  }
+  .buy-tickets__info {
+    width: max-content;
+  }
+  .palas {
+    display: none;
+  }
+  .show-time {
+    flex-direction: column;
+  }
+  .date {
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    border-right: none;
+    border-bottom: 4px solid white;
+  }
+  .time {
+    padding-left: 0;
+    align-items: center;
+  }
+  .countdown {
+    margin-top: 0;
+  }
+  .countdown h2 {
+    font-size: 55px;
+    font-weight: 300;
+    line-height: 60px;
+  }
+  .date__next {
+    top: 60px;
+  }
+  
+  .date__prev {
+    top: 60px;
+  }
 }
