--- a/blocks/main-page/main-page.css
+++ b/blocks/main-page/main-page.css
@@ -1,42 +1,79 @@
 .main-page {
-    margin: 0;
-    padding: 0;
-    background: url(../../images/Фон.jpg);
-    height: 700px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    position: relative;
-    z-index: 1;
+  margin: 0;
+  padding: 0;
+  background: url(../../images/Фон.jpg);
+  height: 700px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  position: relative;
+  z-index: 1;
 }
 
 .title {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 40px;
-    z-index: 2;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  z-index: 2;
 }
 
 .main-image {
-    margin: 0;
-    /* object-fit: cover; */
-    width: 120%;
-    position: absolute;
-    top: 0;
-    left: 0;
+  margin: 0;
+  /* object-fit: cover; */
+  width: 120%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .main-text {
-    max-width: min-content;
-    font-family: 'Bebas Neue';
-    font-size: 35px;
+  width: 100%;
+  max-width: min-content;
+  font-family: "Bebas Neue";
+  font-size: 35px;
   font-weight: 700;
   line-height: 40px;
   letter-spacing: 0.2em;
 }
 .logo {
   max-width: 600px;
+}
+
+@media screen and (max-width: 900px) {
+  .main-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+  }
+  .main-image {
+    margin: 0;
+    /* object-fit: cover; */
+    width: 100%;
+    position: inherit;
+  }
+  .main-image img {
+    margin-bottom: -20%;
+  }
+  .title {
+    margin-top: 80px;
+    gap: 20px;
+  }
+  .logo {
+    padding: 0 20px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .main-text {
+    width: 90%;
+    font-size: 30px;
+  font-weight: 700;
+  line-height: 35px;
+  letter-spacing: 0.1em;
+  }
 }
