--- a/blocks/music/music.css
+++ b/blocks/music/music.css
@@ -13,3 +13,14 @@
 .music__text {
     width: 80%;
 }
+
+@media screen and (max-width: 900px) {
+    .music {
+        background-color: rgba(28,71,168, 1);
+        padding: 30px;
+        gap: 20px;
+    }
+    .music__text {
+        width: 100%;
+    }
+}
