--- a/blocks/questions/questions.css
+++ b/blocks/questions/questions.css
@@ -47,3 +47,15 @@
   overflow: hidden;
   width: 100%;
 }
+
+@media screen and (max-width: 700px) {
+  .questions {
+    margin: 0;
+    padding: 0 30px 30px;
+    background-color: rgba(28, 71, 168, 1);
+  }
+  .questions__box {
+    margin-top: 20px;
+    width: 100%;
+  }
+}
