--- a/blocks/tickets/tickets.css
+++ b/blocks/tickets/tickets.css
@@ -1,9 +1,16 @@
 .tickets {
-    margin: 0 auto;
-    padding-bottom: 60px;
-    background-color: rgba(28,71,168, 0.75);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  margin: 0 auto;
+  padding-bottom: 60px;
+  background-color: rgba(28, 71, 168, 0.75);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+@media screen and (max-width: 900px) {
+  .tickets {
+    padding-bottom: 30px;
+    background-color: rgba(28, 71, 168, 1);
+  }
 }
