--- a/blocks/videos/videos.css
+++ b/blocks/videos/videos.css
@@ -38,3 +38,27 @@
     margin-top: 30px;
     text-align: center;
 }
+
+@media screen and (max-width: 900px) {
+    .videos {
+        padding: 20px 30px;
+        background-color: rgba(28, 71, 168, 1);
+    }
+    .video__content {
+        flex-direction: column;
+        justify-content: center;
+        width: 90%;
+    }
+    .video {
+        flex-direction: row;
+        margin-top: 20px;
+        margin-left: 0;
+        justify-content: space-between;
+    }
+  }
+
+  @media screen and (max-width: 750px) {
+    .video {
+        flex-direction: column;
+    }
+  }
