--- a/blocks/artists/artists.css
+++ b/blocks/artists/artists.css
@@ -1,6 +1,6 @@
 .artists {
   margin: 0;
-  padding: 0 60px 60px;
+  padding: 0 60px;
   background-color: rgba(28, 71, 168, 0.75);
   display: flex;
   flex-direction: column;
@@ -24,12 +24,13 @@
   max-width: 30%;
   text-align: center;
   transition: transform 1s ease-out;
+  
 }
 
 .artist img {
     margin-bottom: -40px;
-    z-index: -2;
     width: 80%;
+    
   }
 
 .artist:hover {
@@ -40,12 +41,11 @@
 .artist__description {
   padding: 15px;
   border-radius: 20px;
-  background: rgba(51, 46, 56, 0.75);
-  z-index: 3;
+  background: rgba(128, 128, 128, .5);
 }
 
 .artist__name {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
   text-align: center;
   font-weight: 400;
   font-size: 18px;
@@ -64,7 +64,7 @@
 
 @media screen and (max-width: 900px) {
   .artists {
-    padding: 0 30px 30px;
+    padding: 0 30px;
     background-color: rgba(28, 71, 168, 1);
     gap: 20px;
   }
