--- a/blocks/calendar/calendar.css
+++ b/blocks/calendar/calendar.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: rgba(28, 71, 168, 1);
+  background-color: rgba(28, 71, 168, 0.75);
   position: relative;
   z-index: 0;
 }
@@ -250,6 +250,12 @@
   align-items: center;
 }
 
+@media screen and (max-width: 900px) {
+  .calendar {
+    background-color: rgba(28, 71, 168, 1);
+  }
+}
+
 @media screen and (max-width: 800px) {
   .calendar {
     padding: 60px 30px 20px;
@@ -284,7 +290,7 @@
   .date__next {
     top: 60px;
   }
-  
+
   .date__prev {
     top: 60px;
   }
