--- a/blocks/main-page/main-page.css
+++ b/blocks/main-page/main-page.css
@@ -1,33 +1,33 @@
 .main-page {
   margin: 0;
   padding: 0;
+  width: 100%;
   background: url(../../images/Фон.jpg);
-  height: 700px;
   background-repeat: no-repeat;
   background-size: cover;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  flex-direction: column;
   position: relative;
   z-index: 1;
 }
 
 .title {
-  width: 100%;
+  width: min-content;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  position: absolute;
+  top: 20%;
+  left: 5%;
   gap: 40px;
   z-index: 2;
 }
 
 .main-image {
   margin: 0;
-  /* object-fit: cover; */
+  margin-bottom: -20%;
   width: 120%;
-  position: absolute;
-  top: 0;
-  left: 0;
+  
 }
 
 .main-text {
@@ -52,7 +52,6 @@
   }
   .main-image {
     margin: 0;
-    /* object-fit: cover; */
     width: 100%;
     position: inherit;
   }
@@ -60,20 +59,23 @@
     margin-bottom: -20%;
   }
   .title {
+    position: inherit;
     margin-top: 80px;
     gap: 20px;
+    left: 0;
   }
   .logo {
-    padding: 0 20px;
+    padding: 0;
   }
 }
 
 @media screen and (max-width: 500px) {
   .main-text {
-    width: 90%;
+    width: 100%;
     font-size: 30px;
   font-weight: 700;
   line-height: 35px;
   letter-spacing: 0.1em;
   }
+  
 }
