--- a/blocks/questions/questions.css
+++ b/blocks/questions/questions.css
@@ -27,6 +27,10 @@
   border-radius: 10px;
   font-family: 'Arial';
 }
+.accordion::after {
+  content: '▼';
+  float: right;
+ }
 
 .accordion__block {
   display: flex;
@@ -42,18 +46,23 @@
 .panel {
   padding: 18px;
   display: none;
-  background-color: pink;
+  background-color: rgb(240, 146, 204);
   border-radius: 10px;
   overflow: hidden;
   width: 100%;
 }
+.panel p {
+  color: black;
+}
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 900px) {
   .questions {
     margin: 0;
     padding: 0 30px 30px;
     background-color: rgba(28, 71, 168, 1);
-  }
+}
+}
+@media screen and (max-width: 700px) {
   .questions__box {
     margin-top: 20px;
     width: 100%;
