--- a/blocks/videos/videos.css
+++ b/blocks/videos/videos.css
@@ -16,11 +16,14 @@
 }
 
 .video__description {
+    padding: 15px;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
+    border-radius: 20px;
+    background: rgba(128, 128, 128, .5);
     gap: 15px;
 }
 
