--- a/blocks/artists/artists.css
+++ b/blocks/artists/artists.css
@@ -1,6 +1,6 @@
 .artists {
   margin: 0;
-  padding: 0 60px;
+  padding: 0 60px 40px;
   background-color: rgba(28, 71, 168, 0.75);
   display: flex;
   flex-direction: column;
@@ -9,8 +9,11 @@
 }
 
 .artists__description {
-  width: 80%;
+  width: 90%;
   text-align: center;
+  font-size: 18px;
+  line-height: 20px;
+  letter-spacing: 0.02em;
 }
 
 .artists__carousel {
@@ -28,10 +31,13 @@
 }
 
 .artist img {
-    margin-bottom: -40px;
-    width: 80%;
-    
+    width: 100%;
   }
+
+.artist__photo {
+  margin-bottom: -40px;
+  object-fit: contain;
+}
 
 .artist:hover {
   text-align: center;
@@ -42,6 +48,7 @@
   padding: 15px;
   border-radius: 20px;
   background: rgba(128, 128, 128, .5);
+  position: relative;
 }
 
 .artist__name {
@@ -49,17 +56,16 @@
   text-align: center;
   font-weight: 400;
   font-size: 18px;
-  line-height: 18px;
-  letter-spacing: 0em;
-
+  line-height: 20px;
+  letter-spacing: 0.02em;
 }
 
 .artist__text {
   text-align: center;
   font-weight: 400;
-  font-size: 12px;
-  line-height: 12px;
-  letter-spacing: 0em;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: 0.02em;
 }
 
 @media screen and (max-width: 900px) {
