--- a/blocks/hamburger/hamburger.css
+++ b/blocks/hamburger/hamburger.css
@@ -13,15 +13,16 @@
   z-index: 5;
 }
 
-.popup__photo {
+/* .popup__photo {
   max-width: 75vw;
   max-height: 75vh;
-}
+} */
 
 .hamburger__box {
   margin: 0;
   padding: 0;
-  width: 300px;
+  max-width: 200px;
+  width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -30,19 +31,19 @@
 }
 
 .hamburger__button__group {
-  margin-top: 140px;
+  margin-top: 100px;
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 20px;
 }
 
 .service-button {
   text-decoration: none;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 23px;
-  letter-spacing: 0em;
-  color: rgba(51, 51, 51, 1);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 18px;
+  letter-spacing: 0.02em;
+  color: rgba(51, 51, 51, .8);
 
 }
 .service-button:hover {
