--- a/blocks/music/music.css
+++ b/blocks/music/music.css
@@ -1,26 +1,29 @@
 .music {
-    margin: 0;
-    padding: 60px;
-    background-color: rgba(28,71,168, 0.75);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    gap: 40px;
+  margin: 0;
+  padding: 60px;
+  background-color: rgba(28, 71, 168, 0.75);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  gap: 40px;
 }
 
 .music__text {
-    width: 80%;
+  width: 90%;
+  font-size: 18px;
+  line-height: 20px;
+  letter-spacing: 0.02em;
 }
 
 @media screen and (max-width: 900px) {
-    .music {
-        background-color: rgba(28,71,168, 1);
-        padding: 30px;
-        gap: 20px;
-    }
-    .music__text {
-        width: 100%;
-    }
+  .music {
+    background-color: rgba(28, 71, 168, 1);
+    padding: 50px 30px 30px;
+    gap: 20px;
+  }
+  .music__text {
+    width: 100%;
+  }
 }
