--- a/blocks/videos/videos.css
+++ b/blocks/videos/videos.css
@@ -1,67 +1,73 @@
 .videos {
-    margin: 0;
-    padding: 30px 60px;
-    background-color: rgba(28,71,168, 0.75);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  margin: 0;
+  padding: 60px;
+  background-color: rgba(28, 71, 168, 0.75);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .video__content {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    width: 80%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
 }
 
 .video__description {
-    padding: 15px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    border-radius: 20px;
-    background: rgba(128, 128, 128, .5);
-    gap: 15px;
+  padding: 15px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  font-size: 17px;
+  line-height: 17px;
+  letter-spacing: 0.02em;
+  border-radius: 20px;
+  background: rgba(128, 128, 128, 0.5);
+  gap: 15px;
 }
 
 .video {
-    margin-left: 20px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
+  margin-left: 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
 }
 
 .video__text {
-    margin-top: 30px;
-    text-align: center;
+  margin-top: 30px;
+  text-align: center;
+  font-size: 22px;
+  line-height: 22px;
+  letter-spacing: 0.02em;
 }
 
 @media screen and (max-width: 900px) {
-    .videos {
-        padding: 20px 30px;
-        background-color: rgba(28, 71, 168, 1);
-    }
-    .video__content {
-        flex-direction: column;
-        justify-content: center;
-        width: 90%;
-    }
-    .video {
-        flex-direction: row;
-        margin-top: 20px;
-        margin-left: 0;
-        justify-content: space-between;
-    }
+  .videos {
+    padding: 20px 30px;
+    background-color: rgba(28, 71, 168, 1);
   }
+  .video__content {
+    flex-direction: column;
+    justify-content: center;
+    width: 90%;
+  }
+  .video {
+    flex-direction: row;
+    margin-top: 20px;
+    margin-left: 0;
+    justify-content: space-between;
+  }
+}
 
-  @media screen and (max-width: 750px) {
-    .video {
-        flex-direction: column;
-    }
+@media screen and (max-width: 750px) {
+  .video {
+    flex-direction: column;
   }
+}
