--- a/blocks/artists/artists.css
+++ b/blocks/artists/artists.css
@@ -27,7 +27,17 @@
   max-width: 30%;
   text-align: center;
   transition: transform 1s ease-out;
+  /* animation: horizont 11s linear infinite; */
   
+}
+.artist:nth-child(1) {
+  animation-delay: calc(3s * -1);
+}
+.artist:nth-child(2) {
+  animation-delay: calc(3s * 0);
+}
+.artist:nth-child(3) {
+  animation-delay: calc(3s * 1);
 }
 
 .artist img {
@@ -75,3 +85,19 @@
     gap: 20px;
   }
 }
+
+/* 
+@keyframes horizont {
+  0% {
+    transform: translateX(100%) scale(.7);
+    opacity: .4;
+  }
+  50% {
+    transform: translateX(0) scale(1);
+    opacity: 1;
+  }
+  100% {
+    opacity: .4;
+    transform: translateX(-100%) scale(.7);
+  }
+} */
