--- a/pages/style.css
+++ b/pages/style.css
@@ -5,6 +5,7 @@
 @import url(../blocks/main/main.css);
 
 @import url(../blocks/hamburger/hamburger.css);
+@import url(../blocks/popup/popup.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/main-page/main-page.css);
 @import url(../blocks/calendar/calendar.css);
