--- a/blocks/questions/questions.css
+++ b/blocks/questions/questions.css
@@ -15,6 +15,9 @@
 }
 
 .accordion {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   background-color: #eeeeee;
   color: #444;
   cursor: pointer;
