--- a/blocks/rewiews/rewiews.css
+++ b/blocks/rewiews/rewiews.css
@@ -4,22 +4,34 @@
   background-color: rgba(28, 71, 168, 0.75);
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center;
   justify-content: center;
-  text-align: center;
+  text-align: center; */
   gap: 40px;
 }
 
 .rewiews__content {
+  /* height: 500px; */
   display: flex;
-  flex-direction: row;
+  flex-wrap: nowrap;
   align-items: center;
-  justify-content: space-between;
+  overflow-x: auto;
+  justify-content: flex-start;
+  
+  background-size: cover;
+  /* overflow: hidden; */
   gap: 20px;
 }
 
 .rewiew {
-  object-fit: cover;
+  flex: 0 0 auto;
+  width: 30%;
+}
+
+#myImg {
+  /* object-fit: cover; */
+  width: 100%;
+  /* flex: 0 0 auto; */
 }
 
 .rewiew img:hover {
