--- a/blocks/artists/artists.css
+++ b/blocks/artists/artists.css
@@ -1,6 +1,6 @@
 .artists {
   margin: 0;
-  padding: 0 60px 40px;
+  padding: 0 0 40px;
   background-color: rgba(28, 71, 168, 0.75);
   display: flex;
   flex-direction: column;
@@ -19,12 +19,14 @@
 .artists__carousel {
   display: flex;
   align-items: center;
+  margin: 0 30px;
+  /* overflow: hidden; */
 }
 
 .artist {
   max-width: 32%;
   text-align: center;
-  margin: 0 2em;
+  margin: 0 50px;
 }
 
 .artist:nth-child(1) {
@@ -44,11 +46,6 @@
 .artist__photo {
   margin-bottom: -40px;
   object-fit: contain;
-}
-
-.artist:hover {
-  text-align: center;
-  transform: scale(1.2);
 }
 
 .artist__description {
