--- a/blocks/calendar/calendar.css
+++ b/blocks/calendar/calendar.css
@@ -265,6 +265,10 @@
   align-items: center;
 }
 
+.hidden {
+  display: none
+}
+
 @media screen and (max-width: 900px) {
   .calendar {
     background-color: rgba(28, 71, 168, 1);
