ускорена работа прилжения, удалены ссылки на Ютуб

--- a/blocks/artists/artists.css
+++ b/blocks/artists/artists.css
@@ -23,9 +23,9 @@
   /* overflow: hidden; */
 }
 
-.swiper-slide:not(.swiper-slide-active) {
+/* .swiper-slide:not(.swiper-slide-active) {
   filter: blur(1px);
-}
+} */
 
 .artist {
   max-width: 32%;
