--- a/blocks/artists/artists.css
+++ b/blocks/artists/artists.css
@@ -1,11 +1,12 @@
 .artists {
   margin: 0;
   padding: 0 0 40px;
-  background-color: rgba(28, 71, 168, 0.75);
+  /* background-color: rgba(28, 71, 168, 0.75); */
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 40px;
+  overflow: hidden;
 }
 
 .artists__description {
