--- a/blocks/calendar/calendar.css
+++ b/blocks/calendar/calendar.css
@@ -1,11 +1,13 @@
 .calendar {
+  width: 100%;
   padding: 100px 0 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: rgba(28, 71, 168, 0.75);
+  /* background-color: rgba(28, 71, 168, 0.75); */
   position: relative;
+  z-index: 2;
 }
 
 .calendar__content {
@@ -272,6 +274,7 @@
 @media screen and (max-width: 900px) {
   .calendar {
     background-color: rgba(28, 71, 168, 1);
+    z-index: 0;
   }
 }
 
