--- a/blocks/gallery/gallery.css
+++ b/blocks/gallery/gallery.css
@@ -1,6 +1,7 @@
 .gallery {
   margin: 0;
-  background-color: rgba(28,71,168, 0.75);
+  width: 100%;
+  /* background-color: rgba(28,71,168, 0.75); */
   padding-top: 40px;
   position: relative;
 }
@@ -13,6 +14,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 20px;
   overflow: hidden;
 }
 
@@ -28,6 +30,8 @@
   max-width: 100%;
   min-height: 100%;
   object-fit: cover;
+  border-radius: 20px;
+  display: block;
 }
 
 .prev,
