--- a/blocks/main-page/main-page.css
+++ b/blocks/main-page/main-page.css
@@ -11,7 +11,8 @@
 }
 
 .title {
-  width: min-content;
+  max-width: max-content;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -19,6 +20,7 @@
   top: 20%;
   left: 5%;
   gap: 40px;
+  z-index: 5;
 }
 
 .main-image {
@@ -28,15 +30,15 @@
   z-index: 1;
 }
 
-
 .main-text {
   width: 100%;
-  max-width: min-content;
+  /* max-width: min-content; */
   font-family: "Bebas Neue";
   font-size: 35px;
   font-weight: 700;
   line-height: 40px;
   letter-spacing: 0.2em;
+  text-align: center;
 }
 .logo {
   max-width: 600px;
@@ -72,9 +74,8 @@
   .main-text {
     width: 100%;
     font-size: 30px;
-  font-weight: 700;
-  line-height: 35px;
-  letter-spacing: 0.1em;
+    font-weight: 700;
+    line-height: 35px;
+    letter-spacing: 0.1em;
   }
-  
 }
