--- a/blocks/music/music.css
+++ b/blocks/music/music.css
@@ -1,7 +1,7 @@
 .music {
   margin: 0;
   padding: 60px 60px 20px;
-  background-color: rgba(28, 71, 168, 0.75);
+  /* background-color: rgba(28, 71, 168, 0.75); */
   display: flex;
   flex-direction: column;
   align-items: center;
