--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,12 +3,18 @@ html {
 }
 
 .page {
-  background: #fff;
+  /* background: #fff; */
   margin: 0 auto;
   padding: 0;
-  max-width: 1280px;
+  /* max-width: 1280px; */
+  max-width: 100%;
+  background: url(../../images/AK1A0457.jpg) 50% / cover;
+  background-repeat: no-repeat;
+  /* background-size: 100%; */
+  background-attachment: fixed;
+  background-position: left;
   /* position: relative; */
-  font-family: 'Bebas Neue', 'Arial', 'Inter', sans-serif;
+  font-family: "Bebas Neue", "Arial", "Inter", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
@@ -17,13 +23,28 @@ html {
   overflow: hidden;
 }
 
-* {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+.background {
+  margin: 0 auto;
+  padding: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgba(28, 71, 168, 0.75);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  left: 0;
+  top: 0;
 }
 
-p, i {
-  font-family: 'Arial';
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+p,
+i {
+  font-family: "Arial";
   margin: 0;
   padding: 0;
   /* font-weight: bold;
@@ -41,7 +62,9 @@ a {
   text-decoration: none;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   /* font-family: Arial; */
   /* font-family: 'Bebas Neue', 'Arial'; */
   margin: 0;
@@ -50,4 +73,3 @@ h1, h2, h3 {
   text-align: center;
   text-transform: uppercase;
 }
-
