--- a/blocks/questions/questions.css
+++ b/blocks/questions/questions.css
@@ -1,7 +1,7 @@
 .questions {
   margin: 0;
   padding: 0 60px 60px;
-  background-color: rgba(28, 71, 168, 0.75);
+  /* background-color: rgba(28, 71, 168, 0.75); */
   display: flex;
   flex-direction: column;
   align-items: center;
