--- a/blocks/rewiews/rewiews.css
+++ b/blocks/rewiews/rewiews.css
@@ -1,7 +1,7 @@
 .rewiews {
   margin: 0 auto;
   padding: 40px 60px 60px;
-  background-color: rgba(28, 71, 168, 0.75);
+  /* background-color: rgba(28, 71, 168, 0.75); */
   display: flex;
   flex-direction: column;
   gap: 40px;
