--- a/blocks/tickets/tickets.css
+++ b/blocks/tickets/tickets.css
@@ -1,7 +1,7 @@
 .tickets {
   margin: 0 auto;
   padding-bottom: 60px;
-  background-color: rgba(28, 71, 168, 0.75);
+  /* background-color: rgba(28, 71, 168, 0.75); */
   display: flex;
   flex-direction: column;
   align-items: center;
