--- a/blocks/videos/videos.css
+++ b/blocks/videos/videos.css
@@ -1,7 +1,7 @@
 .videos {
   margin: 0 auto;
   padding: 60px;
-  background-color: rgba(28, 71, 168, 0.75);
+  /* background-color: rgba(28, 71, 168, 0.75); */
   display: flex;
   flex-direction: column;
   align-items: center;
